--- a/views/sighting.ejs
+++ b/views/sighting.ejs
@@ -40,6 +40,42 @@
             </div>
         </div>
 
+        <!-- Update Modal -->
+        <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h1 class="modal-title fs-5" id="updateModalLabel">Select new idenfification</h1>
+
+                </div>
+                <form method="post" action="<%=`/sightings/${data._id}`%>">
+
+                    <div class="modal-body">
+
+                    <input hidden="true" name="_id" value="<%=data._id%>">
+
+                    <select class="form-select" name="new_identification" id="new_identification" required>
+                        <option selected><%= data.identification %></option>
+                        <% for (let i = 0; i < species.length; i++) {%>
+                            <option value="<%= species[i]%>">
+                            <%= species[i]%>
+                            </option>
+                        <% } %>
+                    </select>
+
+
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                    <input class="btn btn-primary" data-bs-dismiss="modal" type="submit" value="Save">
+                    </div>
+                </form>
+
+            </div>
+            </div>
+        </div>
+        
+
     <% let datetime = new Date() %>
     <% let date_today = datetime.toLocaleDateString() %>
     <% let time_now = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
@@ -57,6 +93,10 @@
 
     <div class="container">
         <h1 class="text-center"> <%= data.identification %> </h1>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal">
+            Change identification
+        </button>
+    
         <h2><%username%></h2>
 
         <div class="row">
@@ -78,11 +118,10 @@
     <h3>Description</h3>
     <p><%= data.description %></p>
     <br>
-    <!-- create modal if abstract exists -->
 
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal">
-            See more info
-        </button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#infoModal">
+        See more info
+    </button>
 
 
 </div>
