--- a/views/sighting.ejs
+++ b/views/sighting.ejs
@@ -10,6 +10,11 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src="/javascripts/chat.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/javascripts/index.js" defer></script>
+    <script src="/javascripts/sighting.js" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe2fdRMMdIhlmYYFXEup7lXGOV8lzm6qk&callback=initMap&v=weekly" defer></script>
+
     <link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <!--Will get users username from cookie-->
@@ -81,23 +86,68 @@
     <% let time_now = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
     <% let image_src = data.img !== null ? data.img : "/images/no_image.png";%>
 
-    <nav class="navbar navbar-default" id = "ournav">
-        <div class="container-fluid">
-          <div class="navbar-header">
-              <a class="navbar-brand"  href="/sightings">Back</a>
-          </div>
-          <span id = "navtext" class = "navbar-text navbar-right">Date/Time: <%=`${date_today} ${time_now}`%> </span>
+    <!-- Modal -->
+    <div class="modal fade" id="username-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Welcome</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="username_input">Username:</label>
+                            <input type="text" class="form-control" id="username_input">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="saveUsername">Save</button>
+                </div>
+            </div>
         </div>
+    </div>
+
+
+    <input id="sightings_creator" value="<%=data.username%>" hidden="True">
+    <form id = "name-form" action = "/mine" method = "post">
+        <input name="username" id="username" hidden="hidden">
         
-      </nav>
+        <input type="submit" value="Submit" hidden = true id = "submit-btn">
+    </form>
+
+
+
+    <!-- NAV BAR -->
+    <nav class="navbar navbar-default" id="ournav">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" id="logo" href="#">
+                    <%= title %>
+                </a>
+            </div>
+            <a class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
+            <a class="nav-link" href="/nearby">Nearby</a>
+            <a class="nav-link" id = "mine-link" >Mine</a>
+            <a class="nav-link" href="/add">Add new Sighting</a>
+            <span id="navtext" class="navbar-text navbar-right">
+                  <div id="username_display"></div>
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#username-modal">
+                    Change username
+                  </button>
+                </span>
+        </div>
+    </nav>
 
     <div class="container">
         <h1 class="text-center"> <%= data.identification %> </h1>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" id="update-id-button">
             Change identification
         </button>
     
-        <h2><%username%></h2>
+        <h2>Created by: <%=data.username%></h2>
 
         <div class="row">
             <div class="col">
@@ -180,6 +230,4 @@
     </div>
 </div>
 </body>
-<script src="/javascripts/sighting.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe2fdRMMdIhlmYYFXEup7lXGOV8lzm6qk&callback=initMap&v=weekly" defer></script>
 </html>
