--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,7 +125,7 @@
 
 <script>
  const userName = document.getElementById("username_input").value;
- document.getElementById('username').value = "testing";
+ document.getElementById('username').value = userName;
  
  
   const mineLink = document.getElementById('mine-link')
