--- a/views/add.ejs
+++ b/views/add.ejs
@@ -2,86 +2,17 @@
 <html>
 
 <head>
-  <title>
-    <%= title %>
-  </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title><%= title %></title>
+    <%- include('partials/head.ejs') %>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-  <script src="/javascripts/index.js"></script>
-  <script src="/javascripts/add.js"></script>
-  
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe2fdRMMdIhlmYYFXEup7lXGOV8lzm6qk&callback=initMap&v=weekly"
-    defer></script>
-
-
+    <script type="module" src="/javascripts/add.js"></script>
 </head>
 
 <body>
 
-    <!-- Modal -->
-    <div class="modal fade" id="username-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Welcome</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                  <form>
-                      <div class="form-group">
-                          <label for="username_input">Username:</label>
-                          <input type="text" class="form-control" id="username_input">
-
-                      </div>
-
-                      <div class="form-group">
-                          <!-- <div id="map-container"><div id="map"></div></div> -->
-                          <input type="hidden" name="user_location" id="user_location">
-                      </div>
-                  </form>
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="saveUserData">Save</button>
-              </div>
-          </div>
-      </div>
-  </div>
-
-
-  <!-- NAV BAR -->
-  <nav class="navbar navbar-default" id="ournav">
-      <div class="container-fluid">
-          <div class="navbar-header">
-              <a class="navbar-brand" id="logo" href="#">
-                  <%= title %>
-              </a>
-          </div>
-          <a class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
-          <a class="nav-link" id="nearby-link">Nearby</a>
-          <a class="nav-link" id="mine-link">Mine</a>
-          <a class="nav-link" href="/add">Add new Sighting</a>
-          <span id="navtext" class="navbar-text navbar-right">
-                <div id="username_display"></div>
-                <button type="button" hidden="True" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#username-modal">
-                  Change profile
-                </button>
-              </span>
-      </div>
-  </nav>
-
-
-  <p id="map-instructions">Click on the map to add a marker.</p>
-  <div id="map-container"><div id="map"></div></div>
+<%- include('partials/header.ejs') %>
+<p id="map-instructions">Click on the map to add a marker.</p>
+<div id="map-container"><div id="map"></div></div>
 
 
   <form class="form-inline form-horizontal" id="xForm" method="post" action="/add" enctype="multipart/form-data">
@@ -120,4 +51,11 @@
   </form>
 </body>
 
+<script >
+  function initialize(){
+    window.initMapNav()
+    window.initMap()
+  }
+</script>
+<%- include('partials/footer.ejs') %>
 </html>
