--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/recent">Recent</a>
+                        <a class="nav-link" href="/">Recent</a>
                     </li>
                     <li class="nav-item">
                        <span id="nearby_span" data-toggle="tooltip" title=""> <a class="nav-link" id="nearby-link" href="#">Nearby</a></span>
