--- a/views/add.ejs
+++ b/views/add.ejs
@@ -3,14 +3,13 @@
 
 <head>
     <title><%= title %></title>
-    <%- include('partials/head.ejs') %>
+    <%- include('../public/partials/head.ejs') %>
 
-    <script type="module" src="/javascripts/add.js"></script>
 </head>
 
 <body>
 
-<%- include('partials/header.ejs') %>
+<%- include('../public/partials/header.ejs') %>
 <p id="map-instructions">Click on the map to add a marker.</p>
 <div id="map-container"><div id="map"></div></div>
 
@@ -50,12 +49,12 @@
     <p><input type="submit" name="g" value="Submit" id="g" onclick="onSubmit(event)"></p>
   </form>
 </body>
-
+<script type="module" src="/javascripts/add.js"></script>
 <script >
   function initialize(){
     window.initMapNav()
     window.initMap()
   }
 </script>
-<%- include('partials/footer.ejs') %>
+<%- include('../public/partials/footer.ejs') %>
 </html>
