--- a/views/add.ejs
+++ b/views/add.ejs
@@ -49,6 +49,7 @@
 
     <p><input type="submit" name="g" value="Submit" id="g" onclick="onSubmit(event)"></p>
   </form>
+  <div id="imgTest"></div>
 </body>
 
 <script >
