--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -3,3 +3,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <script type="module" src="/javascripts/nav.js"></script>
+<link rel="manifest" href="/manifest.json">
