adding sighting to idb

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -41,7 +41,7 @@
     </div>
     <div id="image-div">
         <div><label id="image-label" class="control-label" for="myImage">Choose an image: </label></div>
-        <div id="image-input"><input type="file" id="myImage" name="myImg" onchange="encode()" accept="image/*" ></div>
+        <div id="image-input"><input type="file" id="myImage" name="myImg" accept="image/*" ></div>
     </div>
     <input type="hidden" name="username" id="sightings_username">
     <input type="hidden" name="location" id="location">
